--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jesse-memorial",
+  "name": "celebrating-jesse",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
   "productName": "Quasar App",
