--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,5 +4,10 @@
     "baseUrl": ".",
     "target": "es5",
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
   },
+  "exclude": [
+    "./rest_framework/*",
+    "./admin/*"
+  ]
 }
