Randomize memory order; audio not loading from webpack

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,10 @@
     "target": "es5",
     "experimentalDecorators": true,
     "resolveJsonModule": true,
+    "types": [
+      "node",
+      "webpack-env"
+    ]
   },
   "exclude": [
     "./rest_framework/*",
